SERVER-29152 Do not cache logging ostream in threadlocal when in other thread-specific contexts