src/mongo/client/connpool.cpp
@@ -63,8 +63,8 @@ PoolForHost::~PoolForHost() {
 
 void PoolForHost::clear() {
     if (!_parentDestroyed) {
-        log() << "Dropping all pooled connections to " << _hostName << "(with timeout of "
-              << _socketTimeout << " seconds)";
+        logNoCache() << "Dropping all pooled connections to " << _hostName << "(with timeout of "
+                     << _socketTimeout << " seconds)";
     }
 
     while (!_pool.empty()) {
@@ -86,18 +86,18 @@ void PoolForHost::done(DBConnectionPool* pool, DBClientBase* c) {
     if (isFailed ||
         // Another (later) connection was reported as broken to this host
         (c->getSockCreationMicroSec() < _minValidCreationTimeMicroSec)) {
-        log() << "Ending connection to host " << _hostName << "(with timeout of " << _socketTimeout
-              << " seconds)"
-              << " due to bad connection status; " << openConnections()
-              << " connections to that host remain open";
+        logNoCache() << "Ending connection to host " << _hostName << "(with timeout of "
+                     << _socketTimeout << " seconds)"
+                     << " due to bad connection status; " << openConnections()
+                     << " connections to that host remain open";
         pool->onDestroy(c);
         delete c;
     } else if (_maxPoolSize >= 0 && static_cast<int>(_pool.size()) >= _maxPoolSize) {
         // We have a pool size that we need to enforce
-        log() << "Ending idle connection to host " << _hostName << "(with timeout of "
-              << _socketTimeout << " seconds)"
-              << " because the pool meets constraints; " << openConnections()
-              << " connections to that host remain open";
+        logNoCache() << "Ending idle connection to host " << _hostName << "(with timeout of "
+                     << _socketTimeout << " seconds)"
+                     << " because the pool meets constraints; " << openConnections()
+                     << " connections to that host remain open";
         pool->onDestroy(c);
         delete c;
     } else {
@@ -111,9 +111,9 @@ void PoolForHost::reportBadConnectionAt(uint64_t microSec) {
         microSec > _minValidCreationTimeMicroSec) {
         _minValidCreationTimeMicroSec = microSec;
 
-        log() << "Detected bad connection created at " << _minValidCreationTimeMicroSec
-              << " microSec, clearing pool for " << _hostName << " of " << openConnections()
-              << " connections" << endl;
+        logNoCache() << "Detected bad connection created at " << _minValidCreationTimeMicroSec
+                     << " microSec, clearing pool for " << _hostName << " of " << openConnections()
+                     << " connections" << endl;
 
         clear();
     }
